@@ -1,20 +1,20 @@
 /*
- * 
+ *
  * CDDL HEADER START
- * 
+ *
  * The contents of this file are subject to the terms of the Common Development and Distribution
  * License, Version 1.0 only (the "License"). You may not use this file except in compliance with
  * the License.
- * 
+ *
  * You can obtain a copy of the license at license/ESCIDOC.LICENSE or
  * http://www.escidoc.org/license. See the License for the specific language governing permissions
  * and limitations under the License.
- * 
+ *
  * When distributing Covered Code, include this CDDL HEADER in each file and include the License
  * file at license/ESCIDOC.LICENSE. If applicable, add the following below this CDDL HEADER, with
  * the fields enclosed by brackets "[]" replaced with your own identifying information: Portions
  * Copyright [yyyy] [name of copyright owner]
- * 
+ *
  * CDDL HEADER END
  */
 
@@ -30,14 +30,15 @@ import java.net.URLEncoder;
 
 import de.mpg.mpdl.inge.util.PropertyReader;
 import jakarta.servlet.http.HttpServletRequest;
+import java.nio.charset.StandardCharsets;
 
 /**
  * TODO Description
- * 
+ *
  * @author franke (initial creation)
  * @author $Author$ (last modification)
  * @version $Revision$ $LastChangedDate$
- * 
+ *
  */
 public class Aa {
   //  private static final Logger logger = Logger.getLogger(Aa.class);
@@ -87,7 +88,7 @@ public class Aa {
 
   /**
    * Create a link to the login page with the referer information and a random TAN.
-   * 
+   *
    * @param request the servlet request.
    * @return a URL
    * @throws Exception Encoding exception is unlikely.
@@ -102,12 +103,12 @@ public class Aa {
     //      tan = TanStore.createTan();
     //    } while (!TanStore.storeTan(tan));
 
-    String from = request.getRequestURI().toString();
+    String from = request.getRequestURI();
 
     String page = PropertyReader.getProperty(PropertyReader.INGE_AA_INSTANCE_URL);
 
     String query = request.getQueryString();
-    if (query != null && !"".equals(query)) {
+    if (query != null && !query.isEmpty()) {
       query = "?" + query;
     } else {
       query = "";
@@ -115,7 +116,8 @@ public class Aa {
 
     String tan = TanStore.getNewTan();
 
-    return page + "login.jsp?from=" + URLEncoder.encode(from + query, "UTF-8") + "&tan=" + URLEncoder.encode(tan, "UTF-8");
+    return page + "login.jsp?from=" + URLEncoder.encode(from + query, StandardCharsets.UTF_8) + "&tan="
+        + URLEncoder.encode(tan, StandardCharsets.UTF_8);
   }
 
 
