@@ -1,19 +1,19 @@
 /*
  * CDDL HEADER START
- * 
+ *
  * The contents of this file are subject to the terms of the Common Development and Distribution
  * License, Version 1.0 only (the "License"). You may not use this file except in compliance with
  * the License.
- * 
+ *
  * You can obtain a copy of the license at license/ESCIDOC.LICENSE or
  * http://www.escidoc.org/license. See the License for the specific language governing permissions
  * and limitations under the License.
- * 
+ *
  * When distributing Covered Code, include this CDDL HEADER in each file and include the License
  * file at license/ESCIDOC.LICENSE. If applicable, add the following below this CDDL HEADER, with
  * the fields enclosed by brackets "[]" replaced with your own identifying information: Portions
  * Copyright [yyyy] [name of copyright owner]
- * 
+ *
  * CDDL HEADER END
  */
 /*
@@ -29,6 +29,7 @@ import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLConnection;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
@@ -63,7 +64,7 @@ import jakarta.faces.model.SelectItem;
 
 /**
  * Backing Bean for Browse By
- * 
+ *
  * @author kleinfe1 (initial creation)
  * @author $Author$ (last modification)
  * @version $Revision$ $LastChangedDate$
@@ -77,12 +78,8 @@ public class BrowseByPage extends BreadcrumbPage {
 
   private List<String> creators;
   private List<String> subjects;
-  private SelectItem[] dateOptions;
 
   private String currentCharacter = "A";
-
-  private final String queryDdc = "dc:title";
-  private final String queryPerson = "foaf:family_name";
 
   public BrowseByPage() {}
 
@@ -99,7 +96,7 @@ public class BrowseByPage extends BreadcrumbPage {
 
   /**
    * Perfom search for browse by values.
-   * 
+   *
    * @return navigation string for page reload
    */
   public String startCharacterSearch(String selChar) {
@@ -113,7 +110,7 @@ public class BrowseByPage extends BreadcrumbPage {
 
   /**
    * Call the cone service to retrive the browse by values.
-   * 
+   *
    * @param type, type of the cone request (persons, subjects, journals)
    * @param startChar (the character with which the value has to start)
    * @return
@@ -126,7 +123,7 @@ public class BrowseByPage extends BreadcrumbPage {
         localLang = "en";
       }
       final URL coneUrl = new URL(PropertyReader.getProperty(PropertyReader.INGE_CONE_SERVICE_URL) + type + "/query?f=options&"
-          + this.bbBean.getQuery() + "=" + URLEncoder.encode("\"" + startChar + "*\"", "UTF-8") + "&n=0&lang=" + localLang);
+          + this.bbBean.getQuery() + "=" + URLEncoder.encode("\"" + startChar + "*\"", StandardCharsets.UTF_8) + "&n=0&lang=" + localLang);
       final URLConnection conn = coneUrl.openConnection();
       final HttpURLConnection httpConn = (HttpURLConnection) conn;
       final int responseCode = httpConn.getResponseCode();
@@ -137,7 +134,7 @@ public class BrowseByPage extends BreadcrumbPage {
           throw new RuntimeException(
               "An error occurred while calling Cone Service: " + responseCode + ": " + httpConn.getResponseMessage());
       }
-      final InputStreamReader isReader = new InputStreamReader(coneUrl.openStream(), "UTF-8");
+      final InputStreamReader isReader = new InputStreamReader(coneUrl.openStream(), StandardCharsets.UTF_8);
       final BufferedReader bReader = new BufferedReader(isReader);
       String line = "";
       while ((line = bReader.readLine()) != null) {
@@ -177,7 +174,7 @@ public class BrowseByPage extends BreadcrumbPage {
 
   /**
    * loads the browse by page.
-   * 
+   *
    * @return String navigation string (JSF navigation) to load the browse by page.
    */
   public String loadBrowseBy() {
@@ -188,7 +185,7 @@ public class BrowseByPage extends BreadcrumbPage {
 
   /**
    * loads the affiliation tree page.
-   * 
+   *
    * @return String navigation string (JSF navigation) to load the affiliation tree page.
    */
   public String loadAffiliationTree() {
@@ -200,7 +197,7 @@ public class BrowseByPage extends BreadcrumbPage {
 
   /**
    * loads the browse by creator page.
-   * 
+   *
    * @return String navigation string (JSF navigation) to load the browse by creator page.
    */
   public String loadBrowseByCreator() {
@@ -210,14 +207,15 @@ public class BrowseByPage extends BreadcrumbPage {
     }
     this.bbBean.setCurrentCharacter("");
     this.bbBean.setShowChars();
-    this.bbBean.setQuery(this.queryPerson);
+    String queryPerson = "foaf:family_name";
+    this.bbBean.setQuery(queryPerson);
 
     return "loadBrowseByPage";
   }
 
   /**
    * loads the browse by subject page.
-   * 
+   *
    * @return String navigation string (JSF navigation) to load the browse by subject page.
    */
   public String loadBrowseBySubject(String selSubject) {
@@ -228,14 +226,15 @@ public class BrowseByPage extends BreadcrumbPage {
     }
     this.bbBean.setCurrentCharacter("");
     this.bbBean.setShowChars();
-    this.bbBean.setQuery(this.queryDdc);
+    String queryDdc = "dc:title";
+    this.bbBean.setQuery(queryDdc);
 
     return "loadBrowseByPage";
   }
 
   /**
    * loads the browse by year.
-   * 
+   *
    * @return String navigation string (JSF navigation) to load the browse by year.
    * @throws IngeApplicationException
    * @throws AuthorizationException
@@ -261,10 +260,10 @@ public class BrowseByPage extends BreadcrumbPage {
   }
 
   public SelectItem[] getDateOptions() {
-    this.dateOptions = new SelectItem[] {new SelectItem("published", this.getLabel("dateOptionPublished")),
+    SelectItem[] dateOptions = new SelectItem[] {new SelectItem("published", this.getLabel("dateOptionPublished")),
         new SelectItem("any", this.getLabel("dateOptionAny"))};
 
-    return this.dateOptions;
+    return dateOptions;
   }
 
   public String getSelectedValue() {
@@ -366,7 +365,7 @@ public class BrowseByPage extends BreadcrumbPage {
         PubItemServiceDbImpl.INDEX_VERSION_STATE, State.RELEASED.name()));
     bqb.must(qb);
     Query query = bqb.build()._toQuery();
-    FacesTools.getExternalContext().redirect("SearchResultListPage.jsp?esq=" + URLEncoder.encode(query.toString(), "UTF-8"));
+    FacesTools.getExternalContext().redirect("SearchResultListPage.jsp?esq=" + URLEncoder.encode(query.toString(), StandardCharsets.UTF_8));
   }
 
   @Override
