@@ -1,20 +1,20 @@
 /*
- * 
+ *
  * CDDL HEADER START
- * 
+ *
  * The contents of this file are subject to the terms of the Common Development and Distribution
  * License, Version 1.0 only (the "License"). You may not use this file except in compliance with
  * the License.
- * 
+ *
  * You can obtain a copy of the license at license/ESCIDOC.LICENSE or
  * http://www.escidoc.org/license. See the License for the specific language governing permissions
  * and limitations under the License.
- * 
+ *
  * When distributing Covered Code, include this CDDL HEADER in each file and include the License
  * file at license/ESCIDOC.LICENSE. If applicable, add the following below this CDDL HEADER, with
  * the fields enclosed by brackets "[]" replaced with your own identifying information: Portions
  * Copyright [yyyy] [name of copyright owner]
- * 
+ *
  * CDDL HEADER END
  */
 
@@ -33,6 +33,7 @@ import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Calendar;
@@ -70,7 +71,7 @@ import jakarta.faces.model.SelectItem;
 
 /**
  * Provides different utilities for all kinds of stuff.
- * 
+ *
  * @author: Thomas Diebäcker, created 25.04.2007
  * @version: $Revision$ $LastChangedDate$ Revised by DiT: 07.08.2007
  */
@@ -89,7 +90,7 @@ public class CommonUtils {
   /**
    * Converts a Set to an Array of SelectItems (an empty SelectItem is included at the beginning).
    * This method is used to convert Enums into SelectItems for dropDownLists.
-   * 
+   *
    * @param set the Set to be converted
    * @return an Array of SelectItems
    */
@@ -100,7 +101,7 @@ public class CommonUtils {
   /**
    * Converts a Set to an Array of SelectItems. This method is used to convert Enums into
    * SelectItems for dropDownLists.
-   * 
+   *
    * @param set the Set to be converted
    * @param includeEmptyOption if TRUE an empty SelectItem is added at the beginning of the list
    * @return an Array of SelectItems
@@ -123,7 +124,7 @@ public class CommonUtils {
   /**
    * Converts an Array of Objects to an Array of SelectItems (an empty SelectItem is included at the
    * beginning). This method is used to convert Objects into SelectItems for dropDownLists.
-   * 
+   *
    * @param objects the Array of Objects to be converted
    * @return an Array of SelectItems
    */
@@ -134,7 +135,7 @@ public class CommonUtils {
   /**
    * Converts an Array of Objects to an Array of SelectItems. This method is used to convert Objects
    * into SelectItems for dropDownLists.
-   * 
+   *
    * @param objects the Array of Objects to be converted
    * @return an Array of SelectItems
    */
@@ -172,7 +173,7 @@ public class CommonUtils {
 
   /**
    * Returns all Languages from Cone Service, with "de","en" and "ja" at the first positions.
-   * 
+   *
    * @return all Languages from Cone Service, with "de","en" and "ja" at the first positions
    */
   private static SelectItem[] retrieveLanguageOptions(String locale) {
@@ -186,7 +187,8 @@ public class CommonUtils {
 
       if (getMethod.getStatusCode() == 200) {
         String line;
-        final BufferedReader reader = new BufferedReader(new InputStreamReader(getMethod.getResponseBodyAsStream(), "UTF-8"));
+        final BufferedReader reader =
+            new BufferedReader(new InputStreamReader(getMethod.getResponseBodyAsStream(), StandardCharsets.UTF_8));
         while ((line = reader.readLine()) != null) {
           final String[] pieces = line.split("\\|");
           result.put(pieces[0], pieces[1]);
@@ -253,7 +255,7 @@ public class CommonUtils {
 
       final HttpClient client = new HttpClient();
       final GetMethod getMethod = new GetMethod(PropertyReader.getProperty(PropertyReader.INGE_CONE_SERVICE_URL) + "iso639-3/resource/"
-          + URLEncoder.encode(code, "UTF-8") + "?format=json&lang=" + locale);
+          + URLEncoder.encode(code, StandardCharsets.UTF_8) + "?format=json&lang=" + locale);
       client.executeMethod(getMethod);
       final String response = getMethod.getResponseBodyAsString();
 
@@ -276,7 +278,7 @@ public class CommonUtils {
 
   /**
    * Returns the current value of a comboBox. Used in UIs.
-   * 
+   *
    * @param comboBox the comboBox for which the value should be returned
    * @return the current value of the comboBox
    */
@@ -291,7 +293,7 @@ public class CommonUtils {
 
   /**
    * Formats a date with the default format.
-   * 
+   *
    * @param date the date to be formated
    * @return a formated String
    */
@@ -303,7 +305,7 @@ public class CommonUtils {
 
   /**
    * Formats a date with the default format.
-   * 
+   *
    * @param date the date to be formated
    * @return a formated String
    */
@@ -316,7 +318,7 @@ public class CommonUtils {
   /**
    * Escapes problematic HTML characters ("less than", "greater than", ampersand, apostrophe and
    * quotation mark).
-   * 
+   *
    * @param cdata A String that might contain problematic HTML characters.
    * @return The escaped string.
    */
@@ -335,7 +337,7 @@ public class CommonUtils {
 
   /**
    * Escapes problematic Javascript characters ("'", "\n").
-   * 
+   *
    * @param cdata A String that might contain problematic Javascript characters.
    * @return The escaped string.
    */
@@ -349,7 +351,7 @@ public class CommonUtils {
 
   /**
    * Converts a list of PubItemVOPresentations to a list of PubItems.
-   * 
+   *
    * @param list the list of PubItemVOPresentations
    * @return the list of PubItemVOs
    */
@@ -365,7 +367,7 @@ public class CommonUtils {
 
   /**
    * Converts a list of PubItems to a list of PubItemVOPresentations.
-   * 
+   *
    * @param list the list of PubItemVOs
    * @return the list of PubItemVOPresentations
    */
@@ -381,7 +383,7 @@ public class CommonUtils {
 
   /**
    * Converts a list of PubItems to a list of PubItemVOPresentations.
-   * 
+   *
    * @param list the list of PubItemVOs
    * @return the list of PubItemVOPresentations
    */
@@ -397,7 +399,7 @@ public class CommonUtils {
 
   /**
    * Converts a list of Relations to a list of RelationVOPresentation.
-   * 
+   *
    * @param list the list of RelationVO
    * @return the list of RelationVOPresentation
    */
@@ -413,7 +415,7 @@ public class CommonUtils {
 
   /**
    * Converts a list of PubCollections to a list of PubCollectionVOPresentations.
-   * 
+   *
    * @param list the list of ContextVOs
    * @return the list of PubCollectionVOPresentations
    */
@@ -429,7 +431,7 @@ public class CommonUtils {
 
   /**
    * Converts a list of AffiliationVOs to a list of AffiliationVOPresentations.
-   * 
+   *
    * @param list the list of AffiliationVOs
    * @return the list of AffiliationVOPresentations
    */
@@ -484,7 +486,7 @@ public class CommonUtils {
         if (keyValueParts.length == 1) {
           keyValueParts = new String[] {keyValueParts[0], ""};
         }
-        parameterMap.put(keyValueParts[0], URLDecoder.decode(keyValueParts[1], "UTF-8"));
+        parameterMap.put(keyValueParts[0], URLDecoder.decode(keyValueParts[1], StandardCharsets.UTF_8));
       }
     }
 
@@ -493,21 +495,17 @@ public class CommonUtils {
 
   /**
    * Transforms broken ISO-8859-1 strings into correct UTF-8 strings.
-   * 
+   *
    * @param brokenValue
    * @return hopefully fixed string.
    */
   public static String fixURLEncoding(String input) {
     if (input != null) {
-      try {
-        final String utf8 = new String(input.getBytes("ISO-8859-1"), "UTF-8");
-        if (utf8.equals(input) || utf8.contains("�") || utf8.length() == input.length()) {
-          return input;
-        } else {
-          return utf8;
-        }
-      } catch (final UnsupportedEncodingException e) {
-        throw new RuntimeException(e);
+      final String utf8 = new String(input.getBytes(StandardCharsets.ISO_8859_1), StandardCharsets.UTF_8);
+      if (utf8.equals(input) || utf8.contains("�") || utf8.length() == input.length()) {
+        return input;
+      } else {
+        return utf8;
       }
     }
 
